[gd_scene load_steps=3 format=4 uid="uid://cxg1lh162r2mh"]

[ext_resource type="TileSet" uid="uid://dmvbquec5jcwl" path="res://img/tile/frame_tile01.tres" id="1_8s2cv"]
[ext_resource type="Script" path="res://Scenes/hud.gd" id="1_75m1d"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_75m1d")

[node name="BackGround" type="ColorRect" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 150.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.168627)

[node name="VBoxContainer" type="VBoxContainer" parent="BackGround"]
layout_mode = 1
offset_left = 18.0
offset_top = 18.0
offset_right = 1011.0
offset_bottom = 130.0

[node name="Label" type="Label" parent="BackGround/VBoxContainer"]
layout_mode = 2

[node name="TileMapLayer" type="TileMapLayer" parent="BackGround"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAAAAAABAAAAAAACAAAAAAACAAAAAAADAAAAAAABAAAAAAAEAAAAAAACAAAAAAAFAAAAAAABAAAAAAAGAAAAAAACAAAAAAAHAAAAAAABAAAAAAAIAAAAAAACAAAAAAAJAAAAAAABAAAAAAAKAAAAAAACAAAAAAALAAAAAAABAAAAAAAMAAAAAAACAAAAAAANAAAAAAABAAAAAAAOAAAAAAACAAAAAAAPAAAAAAABAAAAAAAQAAAAAAACAAAAAAARAAAAAAABAAAAAAASAAAAAAACAAAAAAATAAAAAAABAAAAAAAUAAAAAAACAAAAAAAVAAAAAAABAAAAAAAWAAAAAAACAAAAAAAXAAAAAAABAAAAAAAYAAAAAAACAAAAAAAZAAAAAAABAAAAAAAaAAAAAAACAAAAAAAbAAAAAAABAAAAAAAcAAAAAAACAAAAAAAdAAAAAAABAAAAAAAeAAAAAAACAAAAAAAfAAAAAAABAAAAAAAgAAAAAAACAAAAAAAhAAAAAAABAAAAAAAiAAAAAAACAAAAAAAjAAAAAAABAAAAAAAkAAAAAAACAAAAAAAlAAAAAAABAAAAAAAmAAAAAAACAAAAAAAnAAAAAAABAAAAAAAoAAAAAAACAAAAAAApAAAAAAABAAAAAAAqAAAAAAACAAAAAAArAAAAAAABAAAAAAAsAAAAAAACAAAAAAAtAAAAAAABAAAAAAAuAAAAAAACAAAAAAAvAAAAAAABAAAAAAAwAAAAAAACAAAAAAAxAAAAAAABAAAAAAAyAAAAAAACAAAAAAAzAAAAAAABAAAAAAA0AAAAAAACAAAAAAA1AAAAAAABAAAAAAA2AAAAAAACAAAAAAA3AAAAAAABAAAAAAA4AAAAAAACAAAAAAA5AAAAAAABAAAAAAA6AAAAAAACAAAAAAA7AAAAAAABAAAAAAA8AAAAAAACAAAAAAA9AAAAAAABAAAAAAA+AAAAAAACAAAAAAA/AAAAAAADAAAAAAA/AAEAAAADAAEAAAA/AAIAAAADAAEAAAA/AAMAAAADAAEAAAA/AAQAAAADAAEAAAA/AAUAAAADAAEAAAA/AAYAAAADAAEAAAA/AAcAAAADAAEAAAA/AAgAAAADAAMAAAAvAAgAAAACAAMAAAAwAAgAAAACAAMAAAAxAAgAAAACAAMAAAAyAAgAAAACAAMAAAAzAAgAAAACAAMAAAA0AAgAAAACAAMAAAA1AAgAAAACAAMAAAA2AAgAAAACAAMAAAA3AAgAAAACAAMAAAA4AAgAAAACAAMAAAA5AAgAAAACAAMAAAA6AAgAAAACAAMAAAA7AAgAAAACAAMAAAA8AAgAAAACAAMAAAA9AAgAAAACAAMAAAA+AAgAAAACAAMAAAAGAAgAAAACAAMAAAAHAAgAAAACAAMAAAAIAAgAAAACAAMAAAAJAAgAAAACAAMAAAAKAAgAAAACAAMAAAALAAgAAAACAAMAAAAMAAgAAAACAAMAAAANAAgAAAACAAMAAAAOAAgAAAACAAMAAAAPAAgAAAACAAMAAAAQAAgAAAACAAMAAAARAAgAAAACAAMAAAASAAgAAAACAAMAAAATAAgAAAACAAMAAAAUAAgAAAACAAMAAAAVAAgAAAACAAMAAAAWAAgAAAACAAMAAAAXAAgAAAACAAMAAAAYAAgAAAACAAMAAAAZAAgAAAACAAMAAAAaAAgAAAACAAMAAAAbAAgAAAACAAMAAAAcAAgAAAACAAMAAAAdAAgAAAACAAMAAAAeAAgAAAACAAMAAAAfAAgAAAACAAMAAAAgAAgAAAACAAMAAAAhAAgAAAACAAMAAAAiAAgAAAACAAMAAAAjAAgAAAACAAMAAAAkAAgAAAACAAMAAAAlAAgAAAACAAMAAAAmAAgAAAACAAMAAAAnAAgAAAACAAMAAAAoAAgAAAACAAMAAAApAAgAAAACAAMAAAAqAAgAAAACAAMAAAArAAgAAAACAAMAAAAsAAgAAAACAAMAAAAtAAgAAAACAAMAAAAuAAgAAAACAAMAAAABAAgAAAACAAMAAAACAAgAAAACAAMAAAADAAgAAAACAAMAAAAEAAgAAAACAAMAAAAFAAgAAAACAAMAAAAAAAgAAAAAAAMAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAEAAAAAAAYAAAAAAAEAAAAAAAcAAAAAAAEAAAA=")
tile_set = ExtResource("1_8s2cv")

[node name="ConsoleTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="ConsoleTimer" to="." method="_on_console_timer_timeout"]
